# navi

./: README.md  pyproject.toml  requirements.txt
navi/: main.py  menu.py
