[project]
name = "navi"
version = "0.1.0"
description = "AI CLI helper – convert natural language instructions into shell commands"

authors = [
    { name="Oskari Pessinen" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [

]

# CLI-entry point
[project.scripts]
navi = "navi.main:main"

[project.optional-dependencies]
dev = [
    "pytest",   
    "black",  
    "isort"
]

# Build system
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
