[project]
name = "navi"
version = "0.1.0"
description = "AI CLI helper – convert natural language instructions into shell commands"
authors = [{ name = "Oskari Pessinen" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0.43",
    "InquirerPy>=0.3.4",
    "openai>=1.50.0",
    "python-dotenv>=1.0.1"
]

[project.scripts]
navi = "navi.main:main"

[tool.setuptools.packages.find]
include = ["navi*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
